--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,8 @@ dot_config/gh/hosts.yml
 
 # Local machine config
 dot_config/.claude/
+
+# Zsh cache/history (changes constantly)
+dot_config/zsh/.zsh_history
+dot_config/zsh/.zcompdump*
+dot_config/zsh/.zsh_sessions/
