--- a/dot_config/tmux/tmux.conf
+++ b/dot_config/tmux/tmux.conf
@@ -9,13 +9,14 @@ set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'catppuccin/tmux#v2.1.3'
 
+# Window picker (prefix + w)
+bind w run-shell "~/.config/tmux/scripts/window-picker.sh"
+
 # Catppuccin config
 set -g @catppuccin_window_status_style "rounded"
 set -g @catppuccin_window_number_position "right"
-set -g @catppuccin_window_default_fill "number"
-set -g @catppuccin_window_default_text "#W"
-set -g @catppuccin_window_current_fill "number"
-set -g @catppuccin_window_current_text "#W"
+set -g @catppuccin_window_text '#(~/.config/tmux/scripts/git-status.sh "#{window_id}")'
+set -g @catppuccin_window_current_text '#(~/.config/tmux/scripts/git-status.sh "#{window_id}")'
 set -g @catppuccin_status_left_separator  " "
 set -g @catppuccin_status_right_separator ""
 set -g @catppuccin_status_fill "icon"
