--- a/dot_config/tmux/tmux.conf
+++ b/dot_config/tmux/tmux.conf
@@ -8,6 +8,12 @@ set -g @catppuccin_flavor "mocha"
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'catppuccin/tmux#v2.1.3'
+set -g @plugin 'roosta/tmux-fuzzback'
+
+# Fuzzback config (scrollback search)
+set -g @fuzzback-bind /
+set -g @fuzzback-popup 1
+set -g @fuzzback-popup-size '80%'
 
 # Window picker (prefix + w)
 bind w run-shell "~/.config/tmux/scripts/window-picker.sh"
