feat(tmux): add session picker and improve window/session pickers
Scope window picker to current session only (remove -a flag), add
fzf-based session picker with hierarchical window grouping, and use
reverse layout for both pickers.

--- a/dot_config/tmux/tmux.conf
+++ b/dot_config/tmux/tmux.conf
@@ -18,6 +18,9 @@ set -g @fuzzback-popup-size '80%'
 # Window picker (prefix + w)
 bind w run-shell "~/.config/tmux/scripts/window-picker.sh"
 
+# Session picker (prefix + s)
+bind s run-shell "~/.config/tmux/scripts/session-picker.sh"
+
 # Catppuccin config
 set -g @catppuccin_window_status_style "rounded"
 set -g @catppuccin_window_number_position "right"
