--- a/dot_config/tmux/tmux.conf
+++ b/dot_config/tmux/tmux.conf
@@ -9,6 +9,11 @@ set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'catppuccin/tmux#v2.1.3'
 set -g @plugin 'roosta/tmux-fuzzback'
+set -g @plugin 'tmux-plugins/tmux-resurrect'
+set -g @plugin 'tmux-plugins/tmux-continuum'
+
+# Auto-restore sessions on tmux start
+set -g @continuum-restore 'on'
 
 # Fuzzback config (scrollback search)
 set -g @fuzzback-bind /
@@ -32,8 +37,9 @@ set -g @catppuccin_status_fill "icon"
 set -g @catppuccin_status_connect_separator "no"
 
 # Status bar modules
-set -g @catppuccin_directory_text "#{pane_current_path}"
+set -g @catppuccin_directory_text '#(~/.config/tmux/scripts/truncate-path.sh "#{pane_current_path}")'
 set -g status-left ""
+set -g status-right-length 40
 set -g status-right "#{E:@catppuccin_status_directory}#{E:@catppuccin_status_session}"
 
 # Terminal settings
