--- a/dot_codex/config.toml
+++ b/dot_codex/config.toml
@@ -1,3 +1,6 @@
-model = "gpt-5.2-codex"
+model = "gpt-5.3-codex"
 model_reasoning_effort = "high"
 web_search = "live"
+personality = "pragmatic"
+sandbox_mode = "danger-full-access"
+approval_policy = "never"
